umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_indigo_ChEBI_12827.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 210
bond_count: 255
sum_formula: C90H30N60O30
graph6: "~?BQ??????????@?@??_@G?OO?C?CG?A??G??G????????_??@G??@???C_??A????@???AC????O???O????_????????????????@_????C_????@?????C???????????@??????????????G??????G?_????C??????H??????A????????_??????`???????A??????@???????@??????????????????C????????G@???????G????????c????????O?????????G????????O_????????A????????A?????????C?????????????????????@??????????CC???????????????????@G??????????O??????????_??????????????????????????????????@???????????@????????????_??????????@G???????????OA???????????C???????????CG???????????A????????????G????????????G????????????????????????????_????????????@?O???????????@?????????????C_????????????A??????????????@?????????????AC??????????????O?????????????O??????????????_???????????????????????????????G???????????????_??????????????@???????????????H???????????????GA???????????????G???????????????`???????????????@????????????????O???????????????@???????????????????????????????????@?????????????????GC????????????????_????????????????H?????????????????O??????????????????_????????????????CG?????????????????A?????????????????G?????????????????@????????@?G?????????????????_?O???????????????????_O?????????????????@????????G??????????O???????@?????CC???????????????????_????????????@?????C?????????????@???????????????????AO???????????????????Q????O??_?????????????????_??C????????????????G????????????_????????O??????????O?????????????????C??@?????????????????_???_???????????????C?_??????????????????A?C??????????????????O???@?????????????????G????A?????????????????????G??A??????????????????@???@??????C??????????????@???????_??????????????A???????G??G??????????????????C???O???????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????G???????????????????????@????????????????????????C???????????????????????@G???????????????????????A????????????????????????_C????????????????????????`????????????????????????A????????????????????????@?????????????????????????G?????????????????????????????????????????????????????_?????????????????????????G?????????????????????????@??????????????????????????c?????????????????????????A????????????????????????O??G?????????????????????????AC??????????????????????????O??????????????????????????O??????????????????????????C????????????????????????????????????????????????????????@????????????????????????????_???????????????????????O???G???????????????????????????H???????????????????????????@?????????????????????????????G???????????????????????????CG????????????????????????????G???????????????????????????A????????????????????????????@????????????????????????????????????????????????????????????@?????????????????????????????@??????????????????????????????_????????????????????????????@G?????????????????????????????O???????????????????????G??????C?????????????????????????????CG?????????????????????????????A??????????????????????????????G??????????????????????????????G????????????????????????????????????????????????????????????????_??????????????????????????????@???????????????????????????????@???????????????????????????????C_??????????????????????????????A????????????????????????G???????@???????????????????????????????AC???????????????????????????????A????????????????????????????????O????????????????????????????????_?????????????????????????A???????G????????????????????????@??????@??????????????????????????????_??@?????????????????????????????@???G?????????????????????????????O?@????????????????????????????????__??????????????????????????????G??A?????????????????????????????@???@?????????????????????????????G@????????????????????????????????O?G????????"
