umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_indigo_ChEBI_7871.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 82
bond_count: 98
sum_formula: O62P2W18-6
graph6: ~?@Qsa?GCA?_C?@?@?@??_?G??C??G??O??O??G???G???_??A???@????_???O???C????G????G????O????O????@?????G????@?????@?????@?????@C?CO????????@??????GG????????????G??????G?????CC??????@????????_??????@????A??A?????@?A???????@????????@????????C???A????O????????_????????_??@?????@?????????G????????@???A?????C???C????????O?C?????_?????????G?????????A?G???_????C??????????G????@?????O????@??????OO???@????@???????????G??????Q?CO????????????@????????????????????????_???????????O???????????C????????????_?????????????????????????G????????????G????????????C????????????@?
