umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_indigo_ChEBI_9022_fixed.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 92
bond_count: 116
sum_formula: C70W22
graph6: "~?@[WSP?CH?GGo??@?___??A??C@?G??G?_C?????????_??O???AK???g???C????A???O??G????@????G???????@????????????????@?????A??????_???????????B?????A??????@???????W?????@???????D???????O??????C???????@???????H????????_??????AG??????O?????????C???????GG?????@??????????_?????????B????????@??????????_???????_@?????????@????????O?_?????????????????????????????C?????????G???????????P_?????????D???????????_???????????O?????????A?????????C????????????O???????????G???????A??????G????????C????????O??????M????????????O??????_?????I????????????C?????A??????@?????@????????_???????????@_?C??????????A?????????????@??????????????_?????_???????G????????_????@??????????????C?????????????@??????????????C????????????A???"
