umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_indigo_P-92.5.1.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 22
bond_count: 21
sum_formula: C11H6Cl4O
graph6: UhCKC?GO?_?A?A?C?@@??A??_?A??C????O??A??
